flux/apps/base/istio-system/istio/security/peer-authentication.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default-strict-mtls
  namespace: istio-system
spec:
  mtls:
    mode: PERMISSIVE
