flux/apps/base/istio-system/istio/security/authz-authentik.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: authentik-ingress-authz
  namespace: authentik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik
  action: ALLOW
  rules:
    # Allow all traffic when no sidecar is present
    # If sidecars are added later, restrict to istio-system namespace
    - {}
