flux/apps/base/istio-system/istio/security/authz-grafana.yaml
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: grafana-ingress-authz
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces: ["istio-system"]
    - from:
        - source:
            namespaces: ["monitoring"]
