flux/apps/base/istio-system/istio/security/authz-longhorn.yaml
---
# Authorization policy for Grafana (ingress traffic)
# Note: Grafana doesn't have Istio sidecar, so this policy
# would only apply if sidecars are added later
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: longhorn-ingress-authz
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: longhorn
  action: ALLOW
  rules:
    # Allow all traffic when no sidecar is present
    # If sidecars are added later, restrict to istio-system namespace
    - {}
